test/types/seq/bradc/emptySeq3.good
Error: Illegal assignment of nil to structure of type seq(int) (emptySeq3.chpl:1)
